assets/styles/app.scss
/* ... */
.msk-author-note {
  font-size: .75em;
  display: block;
}

.dataset-detail-authors,
.dataset-detail-id {
  color: black;
  font-size: inherit;
}

#dataset-detail-accesspanel {
  border: none;
}

.internal-dataset-badge {
  background: rgb(255, 64, 13);
  color: #ffffff;
}

.publishers-list {
  color: black;
}

.core_facilities-list {
  color: gray;
}

/* Facets */
.facet-header {
  color: #000;
  font-size: 2rem;
}

.show_more {
  font-weight: 700;
  cursor: pointer;
  color: gray;
}

.show_less {
  font-weight: 700;
  cursor: pointer;
  color: gray;
}

.more_facets {
  font-size: smaller;
}

/* About Page */

.about-page-column {
  padding-top: 2em;
  // height: 1900px;
}

.about-page-section {
  margin-bottom: 7em;
}

.team-bio-section {
  margin-bottom: 5em;
  overflow: hidden;
}

.team-bio-picture {
  width: 300px;
  float: left;
  margin-right: 2em;
}

#about-page-nav {
  padding: .25em;
  margin-top: 1em;
  position: sticky;
  position: -webkit-sticky;
  top: 0;
}

.about-anchor-link {
  vertical-align: middle;
  display: inline-block;
  font-weight: bold;
  font-size: .9em;
  text-transform: uppercase;
  color: #717171;
  padding: 1em;
  border-left: 3px solid rgb(255, 64, 13);
  letter-spacing: 0.5px;
}

#contact_form_email .checker {
  display: none;
}


.popover {
  max-width: 400px;
  font-size: 1em;
}

.popover-header {
  font-weight: bold;
  font-size: 1em;
  background-color: $msk-light-blue;
}


.nextPage,
.prevPage {
  background-color: $msk-foundation-teal;
  color: $msk-global__text-color;
  font-size: 1.6rem;
}

.navbar-light .navbar-nav .nav-link {
  color: $bs-nav-link-color;
  font-size: 1.6rem;
  font-weight: 500;
}

.navbar-light .navbar-nav .nav-link.privileged-nav-link {
  color: rgb(236, 161, 108);
  font-size: 1.6rem;
  font-weight: 500;
}

.navbar-light .navbar-nav .nav-link:hover {
  color: $bs-nav-link-color;
  text-decoration: underline;
}


/* Form Controls */
.form-control {
  font-size: 1.7rem;
}

.form-check-input {
  position: relative;
}

/* New Header */
.header-logo {
  width: 270px;
}

.site-title:before {
  height: 0px;
  border-left: none;
  padding-left: 0;
  margin-top: 0;
  position: absolute;

  @media (min-width: 576px) {
    height: 0px;
    border-left: none;
    padding-left: 0;
    margin-top: 0;

  }

  @media (min-width: 768px) {
    content: "";
    // display: block;
    width: 0;
    height: 25px;
    border-left: 1px solid #272524;
    padding-left: 1.6rem;
    // margin-top:.8rem;

  }

  @media (min-width: 992px) {
    content: "";
    // display: block;
    width: 0;
    height: 25px;
    border-left: 1px solid #272524;
    padding-left: 1.6rem;
    margin-top: 0rem;
  }

  @media (min-width: 1200px) {
    content: "";
    // display: block;
    width: 0;
    height: 25px;
    border-left: 1px solid #272524;
    padding-left: 1.6rem;
    // margin-top:.8rem;
  }

  @media (min-width: 1400px) {
    content: "";
    // display: block;
    width: 0;
    height: 25px;
    border-left: 1px solid #272524;
    padding-left: 1.6rem;
    // margin-top:.8rem;
  }
}

.msk-global-nav {
  justify-content: space-evenly;
  margin: 0;
}

.navbar>.container.brand-nav-container {
  justify-content: space-around;
}

.nav-item a {
  color: $msk-global__link-color;
  font-size: 1.6rem;
  font-weight: 300;
  font-size: 1.4rem;
}

dt {
  font-weight: 500;
}

dd {
  font-weight: 375;
}

